add metric function

--- a/predict_differential_diagnosis/multilabel_resgression/multilabel.ipynb
+++ b/predict_differential_diagnosis/multilabel_resgression/multilabel.ipynb
@@ -1489,40 +1489,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_f1(p, r):\n",
-    "    if isinstance(p, (list, tuple)):\n",
-    "        p = np.array(p)\n",
-    "    if isinstance(r, (list, tuple)):\n",
-    "        r = np.array(r)\n",
-    "    denom = p + r\n",
-    "    return (2 * p * r) / (denom + 1e-10)\n",
-    "\n",
-    "def compute_metric(gt_diff_mask, pred_diff_mask, threshold=0.01):\n",
-    "    result = {}\n",
-    "    gt_diff_mask = gt_diff_mask > threshold\n",
-    "    pred_diff_mask = pred_diff_mask > threshold\n",
-    "    ddr = np.sum(np.logical_and(gt_diff_mask, pred_diff_mask), axis=-1) / np.maximum(1, np.sum(gt_diff_mask, axis=-1))\n",
-    "    ddp = np.sum(np.logical_and(gt_diff_mask, pred_diff_mask), axis=-1) / np.maximum(1, np.sum(pred_diff_mask, axis=-1))\n",
-    "    ddf1 = compute_f1(ddp, ddr)\n",
-    "    \n",
-    "    result[f\"ACC\"] = 0.997 # from previous model\n",
-    "    result[f\"DDR\"] = np.mean(ddr)\n",
-    "    result[f\"DDP\"] = np.mean(ddp)\n",
-    "    result[f\"DDF1\"] = np.mean(ddf1)\n",
-    "    result[f\"GM\"] = (result[f\"ACC\"] * result[f\"DDR\"] * result[f\"DDP\"])**(1/3)\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from metric_utils import compute_metric\n",
+    "\n",
     "result = compute_metric(np.array(test_diff), np.array(predictions))"
    ]
   },
