--- a/predict_differential_diagnosis/neural_network/Capstone_Neural_network.ipynb
+++ b/predict_differential_diagnosis/neural_network/Capstone_Neural_network.ipynb
@@ -662,61 +662,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "KikmQoycpbaX"
-      },
-      "outputs": [],
-      "source": [
-        "def calculate_DDR(y_true, y_pred, threshold=0.01):\n",
-        "  #turn prediction intro binary according to the threshold\n",
-        "    y_true_binary = (y_true > threshold).astype(int)\n",
-        "    y_pred_binary = (y_pred > threshold).astype(int)\n",
-        "\n",
-        "    # calculate DDR\n",
-        "    DDR = np.mean([\n",
-        "        np.sum(y_true_binary[i] & y_pred_binary[i]) / np.sum(y_true_binary[i])\n",
-        "        if np.sum(y_true_binary[i]) > 0 else 0\n",
-        "        for i in range(y_true_binary.shape[0])\n",
-        "    ])\n",
-        "    return DDR\n",
-        "\n",
-        "\n",
-        "def calculate_DDP(y_true, y_pred, threshold=0.01):\n",
-        "  #turn prediction intro binary according to the threshold\n",
-        "    y_true_binary = (y_true > threshold).astype(int)\n",
-        "    y_pred_binary = (y_pred > threshold).astype(int)\n",
-        "\n",
-        "   # calculate DDP\n",
-        "    DDP = np.mean([\n",
-        "        np.sum(y_true_binary[i] & y_pred_binary[i]) / np.sum(y_pred_binary[i])\n",
-        "        if np.sum(y_pred_binary[i]) > 0 else 0\n",
-        "        for i in range(y_pred_binary.shape[0])\n",
-        "    ])\n",
-        "    return DDP\n",
-        "\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Z90vixMf2S-x"
-      },
-      "outputs": [],
-      "source": [
-        "def calculate_F1(DDR, DDP):\n",
-        "    # Check for a case where both DDR and DDP are zero to avoid division by zero\n",
-        "    if DDR == 0 and DDP == 0:\n",
-        "        return 0\n",
-        "\n",
-        "    F1 = 2 * (DDR * DDP) / (DDR + DDP)\n",
-        "    return F1\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -739,12 +684,13 @@
         "y_validate_np = y_validate.values\n",
         "y_test_np = y_test.values\n",
         "\n",
-        "DDR_validate = calculate_DDR(y_validate_np, y_pred_validate)\n",
-        "DDP_validate = calculate_DDP(y_validate_np, y_pred_validate)\n",
-        "F1_validate = calculate_F1(DDR_validate, DDP_validate)\n",
-        "print(\"DDR on Validation Set:\", DDR_validate)\n",
-        "print(\"DDP on Validation Set:\", DDP_validate)\n",
-        "print(\"F1 on Validation Set:\", F1_validate)"
+        "from metric_utils import compute_metric\n",
+        "y_true_binary, y_pred_binary = binary_pred(y_validate_np, y_pred_validate, threshold=0.01)\n",
+        "results = compute_metric(y_true_binary, y_pred_binary)\n",
+        "\n",
+        "print(\"DDR on Validation Set:\", results[f\"DDR\"])\n",
+        "print(\"DDP on Validation Set:\", results[f\"DDP\"])\n",
+        "print(\"F1 on Validation Set:\", results[f\"DDF1\"])"
       ]
     },
     {
@@ -770,12 +716,13 @@
       ],
       "source": [
         "# On test set\n",
-        "DDR_test = calculate_DDR(y_test_np, y_pred_test)\n",
-        "DDP_test = calculate_DDP(y_test_np, y_pred_test)\n",
-        "F1_test = calculate_F1(DDR_test, DDP_test)\n",
-        "print(\"DDR on Test Set:\", DDR_test)\n",
-        "print(\"DDP on Test Set:\", DDP_test)\n",
-        "print(\"F1 on Test Set:\", F1_test)"
+        "\n",
+        "y_true_binary, y_pred_binary = binary_pred(y_test_np, y_pred_test, threshold=0.01)\n",
+        "results = compute_metric(y_true_binary, y_pred_binary)\n",
+        "\n",
+        "print(\"DDR on Validation Set:\", results[f\"DDR\"])\n",
+        "print(\"DDP on Validation Set:\", results[f\"DDP\"])\n",
+        "print(\"F1 on Validation Set:\", results[f\"DDF1\"])"
       ]
     }
   ],
@@ -785,11 +732,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.11.5 ('base')",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.11.5"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "3c06e3e46abf38078fe4dac36a0085ec2b134ebbd73dd076183d243eeca6918f"
+      }
     }
   },
   "nbformat": 4,
