--- a/predict_pathology/DS5500_Logistic.ipynb
+++ b/predict_pathology/DS5500_Logistic.ipynb
@@ -941,24 +941,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "667b39ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# a function for evaluating the model and get the metric\n",
-    "def calculate_metric(pathology, prediction, index=[\"data\"]):\n",
-    "    return pd.DataFrame({\n",
-    "        \"accuracy\": sklearn.metrics.accuracy_score(pathology, prediction),\n",
-    "        \"precision\": sklearn.metrics.precision_score(pathology, prediction, average=\"macro\"),\n",
-    "        \"recall\": sklearn.metrics.recall_score(pathology, prediction, average=\"macro\"),\n",
-    "        \"f1 score\": sklearn.metrics.f1_score(pathology, prediction, average=\"macro\"),\n",
-    "        \"balanced accuracy\": sklearn.metrics.balanced_accuracy_score(pathology, prediction)\n",
-    "        }, index=index)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "id": "bdf6fbff",
    "metadata": {},
@@ -984,6 +966,7 @@
     }
    ],
    "source": [
+    "from metric_utils import calculate_metric\n",
     "# apply the function to get the evaluation metric\n",
     "validation_metric = calculate_metric(validatePathology_y, y_pred_validate, index=[\"data\"])"
    ]
