--- a/predict_pathology/RandomForestModel.ipynb
+++ b/predict_pathology/RandomForestModel.ipynb
@@ -270,19 +270,16 @@
         }
       ],
       "source": [
-        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score,balanced_accuracy_score\n",
+        "from metric_utils import calculate_metric\n",
+        "# apply the function to get the evaluation metric\n",
+        "test_metric = calculate_metric(y_test, y_pred_test, index=[\"data\"])\n",
+        "test_metric = test_metric.loc['data']\n",
         "\n",
-        "accuracy = accuracy_score(y_test, y_pred_test)\n",
-        "precision = precision_score(y_test, y_pred_test,average='macro')\n",
-        "recall = recall_score(y_test, y_pred_test,average='macro')\n",
-        "f1 = f1_score(y_test, y_pred_test, average='weighted')\n",
-        "balanced_acc = balanced_accuracy_score(y_test, y_pred_test)\n",
-        "\n",
-        "print(f\"Accuracy: {accuracy}\")\n",
-        "print(f\"Precision: {precision}\")\n",
-        "print(f\"Recall: {recall}\")\n",
-        "print(f\"F1 Score: {f1}\")\n",
-        "print(f\"Balanced Accuracy: {balanced_acc}\")"
+        "print(f\"Accuracy: {test_metric['accuracy']}\")\n",
+        "print(f\"Precision: {test_metric['precision']}\")\n",
+        "print(f\"Recall: {test_metric['recall']}\")\n",
+        "print(f\"F1 Score: {test_metric['f1 score']}\")\n",
+        "print(f\"Balanced Accuracy: {test_metric['balanced accuracy']}\")"
       ]
     },
     {
