--- a/predict_pathology/automl.ipynb
+++ b/predict_pathology/automl.ipynb
@@ -1289,17 +1289,7 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import sklearn.metrics\n",
-    "\n",
-    "def calculate_metric(pathology, prediction, index=[\"data\"]):\n",
-    "    return pd.DataFrame({\n",
-    "        \"accuracy\": sklearn.metrics.accuracy_score(pathology, prediction),\n",
-    "        \"precision\": sklearn.metrics.precision_score(pathology, prediction, average=\"macro\"),\n",
-    "        \"recall\": sklearn.metrics.recall_score(pathology, prediction, average=\"macro\"),\n",
-    "        \"f1 score\": sklearn.metrics.f1_score(pathology, prediction, average=\"macro\"),\n",
-    "        \"balanced accuracy\": sklearn.metrics.balanced_accuracy_score(pathology, prediction)\n",
-    "        }, index=index)\n",
+    "from metric_utils import calculate_metric\n",
     "    \n",
     "valid_metric = calculate_metric(valid['PATHOLOGY'], prediction_valid, index=[\"validation\"])\n",
     "test_metric = calculate_metric(test['PATHOLOGY'], prediction_test, index=[\"test\"])\n",
