--- a/predict_pathology/validate_paper.ipynb
+++ b/predict_pathology/validate_paper.ipynb
@@ -28,17 +28,7 @@
     "    for diseases_row in df['DIFFERENTIAL_DIAGNOSIS']:\n",
     "        diseases.append([disease.strip(\" ''\") for disease in diseases_row.strip(\"[]\").split(\",\") ][0].strip(\"[]\").split(\",\")[0])\n",
     "    df['DIFFERENTIAL_DIAGNOSIS'] = diseases\n",
-    "    return df\n",
-    "\n",
-    "import sklearn.metrics\n",
-    "def calculate_metric(pathology, prediction, index=[\"data\"]):\n",
-    "    return pd.DataFrame({\n",
-    "        \"accuracy\": sklearn.metrics.accuracy_score(pathology, prediction),\n",
-    "        \"precision\": sklearn.metrics.precision_score(pathology, prediction, average=\"macro\"),\n",
-    "        \"recall\": sklearn.metrics.recall_score(pathology, prediction, average=\"macro\"),\n",
-    "        \"f1 score\": sklearn.metrics.f1_score(pathology, prediction, average=\"macro\"),\n",
-    "        \"balanced accuracy\": sklearn.metrics.balanced_accuracy_score(pathology, prediction)\n",
-    "        }, index=index)"
+    "    return df"
    ]
   },
   {
@@ -123,6 +113,7 @@
     }
    ],
    "source": [
+    "from metric_utils import calculate_metric\n",
     "test_metric = calculate_metric(test['PATHOLOGY'], paper_prediction, index=[\"test\"])\n",
     "test_metric"
    ]
