--- a/predict_differential_diagnosis/LSTM/LSTM.ipynb
+++ b/predict_differential_diagnosis/LSTM/LSTM.ipynb
@@ -7585,35 +7585,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "8a2e705a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_f1(p, r):\n",
-    "    if isinstance(p, (list, tuple)):\n",
-    "        p = np.array(p)\n",
-    "    if isinstance(r, (list, tuple)):\n",
-    "        r = np.array(r)\n",
-    "    denom = p + r\n",
-    "    return (2 * p * r) / (denom + 1e-10)\n",
-    "\n",
-    "def compute_metric(gt_diff_mask, pred_diff_mask):\n",
-    "    result = {}\n",
-    "    ddr = np.sum(np.logical_and(gt_diff_mask, pred_diff_mask), axis=-1) / np.maximum(1, np.sum(gt_diff_mask, axis=-1))\n",
-    "    ddp = np.sum(np.logical_and(gt_diff_mask, pred_diff_mask), axis=-1) / np.maximum(1, np.sum(pred_diff_mask, axis=-1))\n",
-    "    ddf1 = compute_f1(ddp, ddr)\n",
-    "    \n",
-    "    result[f\"ACC\"] = 0.997 # from previous model\n",
-    "    result[f\"DDP\"] = np.mean(ddp)\n",
-    "    result[f\"DDR\"] = np.mean(ddr)\n",
-    "    result[f\"DDF1\"] = np.mean(ddf1)\n",
-    "    result[f\"GM\"] = (result[f\"ACC\"] * result[f\"DDR\"] * result[f\"DDP\"])**(1/3)\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 25,
    "id": "11559142",
    "metadata": {},
@@ -7627,6 +7598,7 @@
     }
    ],
    "source": [
+    "from metric_utils import compute_metric\n",
     "# apply the function to get the compute metric of the model\n",
     "metrics = compute_metric(all_labels, np.array(all_predictions))\n",
     "print(metrics)\n"
