--- a/predict_differential_diagnosis/modified_transformer/metric.ipynb
+++ b/predict_differential_diagnosis/modified_transformer/metric.ipynb
@@ -110,38 +110,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_f1(p, r):\n",
-    "    if isinstance(p, (list, tuple)):\n",
-    "        p = np.array(p)\n",
-    "    if isinstance(r, (list, tuple)):\n",
-    "        r = np.array(r)\n",
-    "    denom = p + r\n",
-    "    return (2 * p * r) / (denom + 1e-10)\n",
-    "\n",
-    "def compute_metric(gt_diff_mask, pred_diff_mask):\n",
-    "    result = {}\n",
-    "    ddr = np.sum(np.logical_and(gt_diff_mask, pred_diff_mask), axis=-1) / np.maximum(1, np.sum(gt_diff_mask, axis=-1))\n",
-    "    ddp = np.sum(np.logical_and(gt_diff_mask, pred_diff_mask), axis=-1) / np.maximum(1, np.sum(pred_diff_mask, axis=-1))\n",
-    "    ddf1 = compute_f1(ddp, ddr)\n",
-    "    \n",
-    "    result[f\"ACC\"] = 0.997 # from previous model\n",
-    "    result[f\"DDR\"] = np.mean(ddr)\n",
-    "    result[f\"DDP\"] = np.mean(ddp)\n",
-    "    result[f\"DDF1\"] = np.mean(ddf1)\n",
-    "    result[f\"GM\"] = (result[f\"ACC\"] * result[f\"DDR\"] * result[f\"DDP\"])**(1/3)\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from metric_utils import compute_metric\n",
+    "\n",
     "result = compute_metric(true_array.astype(bool), pred_array.astype(bool))"
    ]
   },
@@ -172,7 +146,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.13 ('ml')",
+   "display_name": "Python 3.11.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -186,12 +160,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "91e8ec6dba721733cbabb6041f889efb611577a5423b619a5dcd4b9c77fda5d9"
+    "hash": "3c06e3e46abf38078fe4dac36a0085ec2b134ebbd73dd076183d243eeca6918f"
    }
   }
  },
