--- a/predict_differential_diagnosis/neural_network/Capstone_Neural_network.ipynb
+++ b/predict_differential_diagnosis/neural_network/Capstone_Neural_network.ipynb
@@ -717,7 +717,8 @@
       "source": [
         "# On test set\n",
         "\n",
-        "y_true_binary, y_pred_binary = binary_pred(y_test_np, y_pred_test, threshold=0.01)\n",
+        "y_true_binary = (y_pred_test > 0.01).astype(int)\n",
+        "y_pred_binary = (y_test_np > 0.01).astype(int))\n",
         "results = compute_metric(y_true_binary, y_pred_binary)\n",
         "\n",
         "print(\"DDR on Validation Set:\", results[f\"DDR\"])\n",
