--- a/predict_differential_diagnosis/neural_network/Capstone_Neural_network.ipynb
+++ b/predict_differential_diagnosis/neural_network/Capstone_Neural_network.ipynb
@@ -685,7 +685,8 @@
         "y_test_np = y_test.values\n",
         "\n",
         "from metric_utils import compute_metric\n",
-        "y_true_binary, y_pred_binary = binary_pred(y_validate_np, y_pred_validate, threshold=0.01)\n",
+         "y_true_binary = (y_pred_validate > 0.01).astype(int)\n",
+        "y_pred_binary = (y_validate_np > 0.01).astype(int))\n",
         "results = compute_metric(y_true_binary, y_pred_binary)\n",
         "\n",
         "print(\"DDR on Validation Set:\", results[f\"DDR\"])\n",
