minor change.ipynb

--- a/predict_differential_diagnosis/neural_network/Capstone_Neural_network.ipynb
+++ b/predict_differential_diagnosis/neural_network/Capstone_Neural_network.ipynb
@@ -684,9 +684,11 @@
         "y_validate_np = y_validate.values\n",
         "y_test_np = y_test.values\n",
         "\n",
+        "import sys\n",
+        "sys.path.append('~/capstone/predict_differential_diagnosis/')\n",
         "from metric_utils import compute_metric\n",
          "y_true_binary = (y_pred_validate > 0.01).astype(int)\n",
-        "y_pred_binary = (y_validate_np > 0.01).astype(int))\n",
+        "y_pred_binary = (y_validate_np > 0.01).astype(int)\n",
         "results = compute_metric(y_true_binary, y_pred_binary)\n",
         "\n",
         "print(\"DDR on Validation Set:\", results[f\"DDR\"])\n",
@@ -719,7 +721,7 @@
         "# On test set\n",
         "\n",
         "y_true_binary = (y_pred_test > 0.01).astype(int)\n",
-        "y_pred_binary = (y_test_np > 0.01).astype(int))\n",
+        "y_pred_binary = (y_test_np > 0.01).astype(int)\n",
         "results = compute_metric(y_true_binary, y_pred_binary)\n",
         "\n",
         "print(\"DDR on Validation Set:\", results[f\"DDR\"])\n",
