minor update pre

--- a/Preprocessing_and_EDA.ipynb
+++ b/Preprocessing_and_EDA.ipynb
@@ -385,7 +385,7 @@
       },
       "outputs": [],
       "source": [
-        "pathology_evidences = encoded_train.groupby(train['PATHOLOGY']).mean()"
+        "pathology_evidences = train.drop(['DIFFERENTIAL_DIAGNOSIS', 'INITIAL_EVIDENCE','SEX','AGE'], axis=1)\.groupby('PATHOLOGY').mean()"
       ]
     },
     {
