add minor comment

--- a/Preprocessing_and_EDA.ipynb
+++ b/Preprocessing_and_EDA.ipynb
@@ -613,7 +613,7 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
+    "# Copy the dataset and change the sex column in new dataset back to male and female\n",
     "data2 = train['SEX']\n",
     "data2 = data2.replace({0: 'male', 1: 'female'})\n",
     "sex_counts = data2.value_counts()\n",
@@ -661,8 +661,8 @@
     }
    ],
    "source": [
+    "# Group the data, calculate count and arrange them in decending order.\n",
     "grouped_data = train.groupby(['PATHOLOGY', 'SEX']).size().unstack(fill_value=0)\n",
-    "\n",
     "grouped_data['Total'] = grouped_data.sum(axis=1)\n",
     "grouped_data_sorted = grouped_data.sort_values(by='Total')\n",
     "\n",
