--- a/AD_system/AD_system.ipynb
+++ b/AD_system/AD_system.ipynb
@@ -13,7 +13,8 @@
     "import numpy as np\n",
     "from DPTreeNode import DPTreeNode\n",
     "import torch\n",
-    "from utils import read_zst, parse_cols, calculate_top_entropy_columns, parse_age\n",
+    "from utils import (read_zst, parse_cols, calculate_top_entropy_columns, parse_age,\n",
+    "                   column_translate, pathology_translate)\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import os\n",
     "import torch\n",
@@ -34,12 +35,14 @@
     "model = LSTMModel(input_size, hidden_size, output_size).to(device)\n",
     "model.load_state_dict(torch.load('./stored_files//best_model.pth'))\n",
     "model.eval()\n",
-    "age_scaler = pickle.load(open('./stored_files/age_scaler.pkl', 'rb'))"
+    "age_scaler = pickle.load(open('./stored_files/age_scaler.pkl', 'rb'))\n",
+    "column_translations = column_translate()\n",
+    "pathology_translations = pathology_translate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,12 +84,14 @@
     "prefix_to_columns, column_to_prefix = parse_cols(original_column_names)\n",
     "# Load test_y just to know all possible pathologies\n",
     "# -------------------------------------------\n",
-    "test_y = read_zst('./stored_files/test_y.zst')"
+    "test_y = read_zst('./stored_files/test_y.zst')\n",
+    "all_pathologies = test_y.columns\n",
+    "del test_y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -112,55 +117,56 @@
       "\n",
       "Agent inquiries:\n",
       "----------------\n",
-      "- douleurxx_endroitducorps\n",
-      "     bas_du_thorax\n",
-      "     haut_du_thorax\n",
-      "     hypochondre_D_\n",
-      "- douleurxx_irrad\n",
-      "     bas_du_thorax\n",
-      "     haut_du_thorax\n",
-      "- douleurxx_carac\n",
-      "     lancinante_/_choc_électrique\n",
-      "     sensible\n",
-      "     un_tiraillement\n",
-      "     une_brûlure_ou_chaleur\n",
-      "- douleurxx_intens\n",
+      "- Do you feel pain somewhere?\n",
+      "     lower chest\n",
+      "     upper chest\n",
+      "     hypochondrium(R)\n",
+      "- Does the pain radiate to another location?\n",
+      "     lower chest\n",
+      "     upper chest\n",
+      "- Characterize your pain:\n",
+      "     haunting\n",
+      "     sensitive\n",
+      "     tugging\n",
+      "     burning\n",
+      "- How intense is the pain?\n",
       "     6\n",
-      "- douleurxx_soudain\n",
+      "- How fast did the pain appear?\n",
       "     2\n",
-      "- douleurxx_precis\n",
+      "- How precisely is the pain located?\n",
       "     3\n",
-      "- f10.129\n",
+      "- Do you drink alcohol excessively or do you have an addiction to alcohol?\n",
       "     Y\n",
-      "- hernie_hiatale\n",
+      "- Do you have a hiatal hernia?\n",
       "     Y\n",
-      "- e66\n",
+      "- Are you significantly overweight compared to people of the same height as you?\n",
       "     Y\n",
-      "- j45\n",
+      "- Do you have asthma or have you ever had to use a bronchodilator in the past?\n",
       "     Y\n",
-      "- ww_dd\n",
+      "- Are your symptoms worse when lying down and alleviated while sitting up?\n",
       "     Y\n",
-      "- preg1\n",
+      "- Do you think you are pregnant or are you currently pregnant?\n",
       "     Y\n",
-      "- f17.210\n",
+      "- Do you smoke cigarettes?\n",
       "     Y\n",
-      "- vo_sg\n",
+      "- Have you recently thrown up blood or something resembling coffee beans?\n",
       "     Y\n",
-      "- pyrosis\n",
+      "- Do you have a burning sensation that starts in your stomach then goes up into your throat, and can be associated with a bitter taste in your mouth?\n",
       "     Y\n",
-      "- toux\n",
+      "- Do you have a cough?\n",
       "     Y\n",
-      "- melena\n",
+      "- Have you recently had stools that were black (like coal)?\n",
       "     Y\n",
-      "- ww_bouffe\n",
+      "- Do you have symptoms that get worse after eating?\n",
       "     Y\n",
-      "- trav1\n",
+      "- Have you traveled out of the country in the last 4 weeks?\n",
       "     N\n",
-      "- lesions_peau_endroitducorps\n",
+      "- Where is the affected region located?\n",
+      "     N\n",
       "\n",
       "Predicted Differential:\n",
       "-----------------------\n",
-      "Embolie pulmonaire, Possible NSTEMI / STEMI, Pneumonie, Myasthénie grave, Exacerbation aigue de MPOC et/ou surinfection associée, Laryngo-trachéo-bronchite (Croup), Ebola, Réaction dystonique aïgue\n"
+      "Pulmonary embolism, Possible NSTEMI / STEMI, Pneumonia, Myasthenia gravis, Acute COPD exacerbation / infection, Croup, Ebola, Acute dystonic reactions\n"
      ]
     }
    ],
@@ -180,15 +186,17 @@
     "print('----------------')\n",
     "for i in range(num_question):\n",
     "    new_inquiry = root.next_question\n",
-    "    print(f'- {original_column_names[new_inquiry].split(\"_@_\")[0]}')\n",
+    "    col_english = column_translations[original_column_names[new_inquiry]]\n",
+    "    print(f'- {col_english.split(\"_@_\")[0]}')\n",
     "    if column_to_prefix[new_inquiry]:\n",
     "        new_inquiry = prefix_to_columns[column_to_prefix[new_inquiry]]\n",
     "        log_answer = instance_tensor[new_inquiry].tolist()\n",
     "        for response, q_num in zip(log_answer, new_inquiry):\n",
     "            if response == 1:\n",
-    "                print(f'     {original_column_names[q_num].split(\"_@_\")[1]}')\n",
-    "        if not sum(log_answer):\n",
-    "             print(f'     N')\n",
+    "                evidence = column_translations[original_column_names[q_num]]\n",
+    "                print(f'     {evidence.split(\"_@_\")[1]}')\n",
+    "        if sum(log_answer) == -len(log_answer):\n",
+    "            print(f'     N')\n",
     "    else:\n",
     "        new_inquiry = [new_inquiry]\n",
     "        if instance_tensor[new_inquiry].tolist()[0]:\n",
@@ -258,7 +266,8 @@
     "print()\n",
     "print('Predicted Differential:')\n",
     "print('-----------------------')\n",
-    "print(', '.join(test_y.columns[predictions.cpu().numpy()[0].astype(bool)]))"
+    "prediction = all_pathologies[predictions.cpu().numpy()[0].astype(bool)]\n",
+    "print(', '.join([pathology_translations[french_path] for french_path in prediction]))"
    ]
   }
  ],
