--- a/AD_system/AD_system.ipynb
+++ b/AD_system/AD_system.ipynb
@@ -2,31 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "from tqdm import tqdm\n",
     "import pandas as pd\n",
-    "import zstandard as zstd\n",
     "import numpy as np\n",
     "from DPTreeNode import DPTreeNode\n",
     "import torch\n",
+    "from torch.utils.data import DataLoader\n",
     "from utils import (read_zst, parse_cols, calculate_top_entropy_columns, parse_age,\n",
     "                   column_translate, pathology_translate)\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import os\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "from torch.utils.data import TensorDataset, DataLoader\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore', category=UserWarning, module='sklearn')\n",
     "from LSTMModel import LSTMModel\n",
     "\n",
     "# Load every needed in AD system\n",
-    "tree_root = pickle.load(open('./stored_files/inquiry_system.pkl', 'rb'))\n",
+    "tree_root = pickle.load(open('./stored_files/simple_tree.pkl', 'rb'))\n",
     "\n",
     "input_size = 518  # number of features\n",
     "hidden_size = 64\n",
@@ -42,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +49,7 @@
     "train_wo_sex['AGE'] = train_wo_sex['AGE'].apply(parse_age)\n",
     "\n",
     "n = len(train_wo_sex)\n",
-    "train_wo_sex_tensor = torch.tensor(train_wo_sex.values, dtype=torch.int8).cuda()\n",
+    "train_wo_sex_tensor = torch.tensor(train_wo_sex.values, dtype=torch.int8).to(device)\n",
     "age_idx = train_wo_sex.columns.get_loc('AGE')\n",
     "original_column_names = train_wo_sex.columns.copy()\n",
     "train_wo_sex.columns = range(len(train_wo_sex.columns))\n",
@@ -75,7 +70,7 @@
     "test_wo_sex['AGE'] = test_wo_sex['AGE'].apply(parse_age)\n",
     "\n",
     "test_wo_sex.columns = range(len(test_wo_sex.columns))\n",
-    "test_wo_sex_tensor = torch.tensor(test_wo_sex.values, dtype=torch.int32).cuda()\n",
+    "test_wo_sex_tensor = torch.tensor(test_wo_sex.values, dtype=torch.int8).to(device)\n",
     "test_wo_age_tensor = test_wo_sex_tensor.clone()\n",
     "test_wo_age_tensor[:, age_idx] = 0\n",
     "test_wo_sex = test_wo_sex.replace(0, -1)\n",
@@ -86,12 +81,13 @@
     "# -------------------------------------------\n",
     "test_y = read_zst('./stored_files/test_y.zst')\n",
     "all_pathologies = test_y.columns\n",
+    "# pickle.dump(all_pathologies, open('./stored_files/all_pathologies.pkl', 'wb'))\n",
     "del test_y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,14 +95,14 @@
     "single_inference = test_wo_sex.iloc[0]\n",
     "instance_sex = 'F' if test_sex.iloc[0] else 'M'\n",
     "instance_age = test_age.iloc[0]\n",
-    "instance_tensor = torch.tensor(single_inference.values, dtype=torch.int8).cuda()\n",
+    "instance_tensor = torch.tensor(single_inference.values, dtype=torch.int8).to(device)\n",
     "instance_wo_age = instance_tensor.clone()\n",
     "instance_wo_age[0] = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +168,6 @@
    ],
    "source": [
     "# For comments in this part please check inquiry_system.ipynb\n",
-    "result = None\n",
     "num_question = 20\n",
     "percent = 500\n",
     "when_to_consider_age = 3\n",
@@ -228,7 +223,7 @@
     "                for question_idx in new_inquiry:\n",
     "                    similarity += 2 * (train_wo_age_tensor[:, question_idx] != instance_wo_age[question_idx])\n",
     "        else:\n",
-    "            similarity = torch.zeros(train_wo_sex_tensor.size(0), device=\"cuda\")\n",
+    "            similarity = torch.zeros(train_wo_sex_tensor.size(0), device=device)\n",
     "            for question_idx in reveal:\n",
     "                if question_idx == age_idx:\n",
     "                    similarity += (train_wo_sex_tensor[:, age_idx] - instance_tensor[age_idx]).abs()\n",
