--- a/Preprocessing_and_EDA.ipynb
+++ b/Preprocessing_and_EDA.ipynb
@@ -18,7 +18,9 @@
     "%matplotlib inline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.feature_selection import SequentialFeatureSelector as sfs\n",
-    "import textwrap"
+    "import textwrap\n",
+    "import json\n",
+    "import os\n"
    ]
   },
   {
@@ -302,9 +304,6 @@
     }
    ],
    "source": [
-    "import json\n",
-    "import os\n",
-    "\n",
     "class DataProcessor:\n",
     "    def __init__(self, pathology_path, evidences_path):\n",
     "        # Correctly handle the tilde in the file path\n",
@@ -565,8 +564,7 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
+    "# Visualize age distribution\n",
     "data = train['AGE']\n",
     "plt.figure(figsize=(6, 6))\n",
     "plt.hist(data, bins=20, edgecolor='black', color='skyblue')\n",
