--- a/predict_pathology/RandomForestModel.ipynb
+++ b/predict_pathology/RandomForestModel.ipynb
@@ -21,7 +21,9 @@
     "from scipy.stats import linregress\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.datasets import make_classification\n"
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "from metric_utils import calculate_metri"
    ]
   },
   {
@@ -32,7 +34,7 @@
    },
    "outputs": [],
    "source": [
-    "#import dataset\n",
+    "# Import dataset\n",
     "train = pd.read_csv('../data/trainProcessed.csv')\n",
     "validate = pd.read_csv('../data/validateProcessed.csv')\n",
     "test = pd.read_csv('../data/testProcessed.csv')"
@@ -46,7 +48,7 @@
    },
    "outputs": [],
    "source": [
-    "#Our group decided to use Random forest to predict the pathology.\n",
+    "#Our group decided to use Random forest to predict the pathology, drop unecessary columns.\n",
     "\n",
     "def data_pre(df):\n",
     "    y=df['PATHOLOGY']\n",
@@ -263,10 +265,6 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.datasets import make_classification\n",
-    "\n",
     "# To find the best parameter for the model, we decided to run the grid search.\n",
     "\n",
     "X,y=data_pre(train)\n",
@@ -361,6 +359,7 @@
    },
    "outputs": [],
    "source": [
+    "# Prepare the validation set\n",
     "X_validate,y_validate=data_pre(validate)\n",
     "y_pred_validate=clf.predict(X_validate)"
    ]
@@ -388,8 +387,7 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-    "\n",
+    "# Use Accuracy, Precision, Recall and F1 score to evaluate the performance\n",
     "accuracy_v = accuracy_score(y_validate, y_pred_validate)\n",
     "precision_v = precision_score(y_validate, y_pred_validate,average='macro')\n",
     "recall_v = recall_score(y_validate, y_pred_validate,average='macro')\n",
@@ -427,6 +425,7 @@
    },
    "outputs": [],
    "source": [
+    "# Prepare the test set\n",
     "y_test=test['PATHOLOGY']\n",
     "X_test=test.drop(['DIFFERENTIAL_DIAGNOSIS','PATHOLOGY','INITIAL_EVIDENCE'], axis=1)\n",
     "y_pred_test=clf.predict(X_test)"
@@ -456,7 +455,6 @@
     }
    ],
    "source": [
-    "from metric_utils import calculate_metric\n",
     "# apply the function to get the evaluation metric\n",
     "test_metric = calculate_metric(y_test, y_pred_test, index=[\"data\"])\n",
     "test_metric = test_metric.loc['data']\n",
@@ -557,7 +555,6 @@
     "classes = np.unique(y_test)\n",
     "accuracies = {}\n",
     "for cls in classes:\n",
-    "\n",
     "    cls_true = (y_test == cls).astype(int)\n",
     "    cls_pred = (y_pred_test == cls).astype(int)\n",
     "\n",
