--- a/AD_system/AD_system.ipynb
+++ b/AD_system/AD_system.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -138,15 +138,15 @@
       "- Are you significantly overweight compared to people of the same height as you?\n",
       "     Y\n",
       "- Do you have asthma or have you ever had to use a bronchodilator in the past?\n",
-      "     Y\n",
+      "     N\n",
       "- Are your symptoms worse when lying down and alleviated while sitting up?\n",
       "     Y\n",
       "- Do you think you are pregnant or are you currently pregnant?\n",
       "     Y\n",
       "- Do you smoke cigarettes?\n",
-      "     Y\n",
+      "     N\n",
       "- Have you recently thrown up blood or something resembling coffee beans?\n",
-      "     Y\n",
+      "     N\n",
       "- Do you have a burning sensation that starts in your stomach then goes up into your throat, and can be associated with a bitter taste in your mouth?\n",
       "     Y\n",
       "- Do you have a cough?\n",
@@ -154,7 +154,7 @@
       "- Have you recently had stools that were black (like coal)?\n",
       "     Y\n",
       "- Do you have symptoms that get worse after eating?\n",
-      "     Y\n",
+      "     N\n",
       "- Have you traveled out of the country in the last 4 weeks?\n",
       "     N\n",
       "- Where is the affected region located?\n",
@@ -194,7 +194,7 @@
     "            print(f'     N')\n",
     "    else:\n",
     "        new_inquiry = [new_inquiry]\n",
-    "        if instance_tensor[new_inquiry].tolist()[0]:\n",
+    "        if instance_tensor[new_inquiry].tolist()[0] == 1:\n",
     "            print(f'     Y')\n",
     "        else:\n",
     "            print(f'     N')\n",
@@ -229,6 +229,7 @@
     "                    similarity += (train_wo_sex_tensor[:, age_idx] - instance_tensor[age_idx]).abs()\n",
     "                else:\n",
     "                    similarity += 2 * (train_wo_age_tensor[:, question_idx] != instance_wo_age[question_idx])\n",
+    "        \n",
     "        k = n//10000*percent\n",
     "        values, top_indices = torch.topk(similarity, k, largest=False)\n",
     "        top_actual_indices = top_indices\n",
@@ -264,6 +265,13 @@
     "prediction = all_pathologies[predictions.cpu().numpy()[0].astype(bool)]\n",
     "print(', '.join([pathology_translations[french_path] for french_path in prediction]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
